Upgrading LESS, spacing fix

--- a/less/pages/_contact.less
+++ b/less/pages/_contact.less
@@ -44,6 +44,7 @@
 					float: left;
 					display: block;
 					font-size: 15px;
+					margin-right: 3px;
 				}
 
 				a {
